feat(m2.8): 幂等消费（idempotent_consumers 表去重）